<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmets.FragmentCheckBox">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView2"
        android:layout_width="178dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="7dp"
        android:text="@string/messChe"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Check1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/Check1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="Opcion 1"
        app:layout_constraintBottom_toTopOf="@+id/Check2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <CheckBox
        android:id="@+id/Check2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="22dp"

        android:text="Opcion 2"
        app:layout_constraintBottom_toTopOf="@+id/btn1"
        app:layout_constraintStart_toStartOf="@+id/Check1"
        app:layout_constraintTop_toBottomOf="@+id/Check1" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="87dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="218dp"
        android:text="@string/btn1"
        app:layout_constraintBottom_toTopOf="@+id/btnToast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Check2" />

    <Button
        android:id="@+id/btnToast"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="31dp"
        android:text="@string/btnToast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

</android.support.constraint.ConstraintLayout>